# repo-mapping-manifest-repro

./: .bazelrc  .npmrc  BUILD.bazel  MODULE.bazel  package.json  pnpm-lock.yaml  rules_js_home_npmrc.patch  slow_test.js
