load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

js_test(
    name = "slow_test",
    data = [
        "//:node_modules/@aws-crypto/sha256-js",
        "//:node_modules/@c88/v8-coverage",
        "//:node_modules/@formatjs/intl",
        "//:node_modules/@formatjs/intl-localematcher",
        "//:node_modules/@googleapis/sheets",
        "//:node_modules/@popperjs/core",
        "//:node_modules/@sentry/types",
        "//:node_modules/@types/chrome-remote-interface",
        "//:node_modules/@types/color",
        "//:node_modules/@types/dedent",
        "//:node_modules/@types/express",
        "//:node_modules/@types/functional-red-black-tree",
        "//:node_modules/@types/imurmurhash",
        "//:node_modules/@types/ip",
        "//:node_modules/@types/json-schema",
        "//:node_modules/@types/json-stable-stringify",
        "//:node_modules/@types/mdurl",
        "//:node_modules/@types/passport-azure-ad",
        "//:node_modules/@types/react",
        "//:node_modules/@types/react-dom",
        "//:node_modules/@types/react-modal",
        "//:node_modules/@types/remove-markdown",
        "//:node_modules/@types/request",
        "//:node_modules/@types/seed-random",
        "//:node_modules/@types/semver",
        "//:node_modules/@types/showdown",
        "//:node_modules/@types/sockjs-client",
        "//:node_modules/@types/urijs",
        "//:node_modules/@types/uuid",
        "//:node_modules/@types/whatwg-mimetype",
        "//:node_modules/@types/zxcvbn",
        "//:node_modules/chrome-remote-interface",
        "//:node_modules/color",
        "//:node_modules/aws-sdk",
        "//:node_modules/base64-js",
        "//:node_modules/bignumber.js",
        "//:node_modules/dedent",
        "//:node_modules/express",
        "//:node_modules/functional-red-black-tree",
        "//:node_modules/imurmurhash",
        "//:node_modules/ip",
        "//:node_modules/json-schema",
        "//:node_modules/json-stable-stringify",
        "//:node_modules/mdurl",
        "//:node_modules/passport-azure-ad",
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//:node_modules/react-modal",
        "//:node_modules/remove-markdown",
        "//:node_modules/request",
        "//:node_modules/seed-random",
        "//:node_modules/semver",
        "//:node_modules/showdown",
        "//:node_modules/sockjs-client",
        "//:node_modules/urijs",
        "//:node_modules/uuid",
        "//:node_modules/whatwg-mimetype",
        "//:node_modules/zxcvbn",
        "//:node_modules/classnames",
        "//:node_modules/emotion",
        "//:node_modules/immer",
        "//:node_modules/memoize-one",
        "//:node_modules/openapi3-ts",
        "//:node_modules/path-to-regexp",
        "//:node_modules/react-intl",
        "//:node_modules/react-markdown",
        "//:node_modules/simple-markdown",
        "//:node_modules/slackify-markdown",
        "//:node_modules/ssf",
        "//:node_modules/tiktoken",
        "//:node_modules/ulidx",
        "//:node_modules/universal-base64url",
        "//:node_modules/vega",
        "//:node_modules/xml-js",
    ],
    entry_point = "slow_test.js",
)
