bazel_dep(name = "platforms", version = "0.0.7")
bazel_dep(name = "aspect_bazel_lib", version = "1.34.5")

bazel_dep(name = "rules_nodejs", version = "6.0.2")
bazel_dep(name = "aspect_rules_js", version = "1.33.1")
single_version_override(
    module_name = "aspect_rules_js",
    patch_strip = 1,
    patches = ["//:rules_js_home_npmrc.patch"],
    version = "1.33.1",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    no_optional = True,
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    quiet = False,
    # By default lifecycle hooks are not sandboxed. So we just disable them for hermeticity.
    run_lifecycle_hooks = False,
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")
